Bug 476309 - Size option with pen pressure is enabled for every brushes all of a sudden.
Summary: Size option with pen pressure is enabled for every brushes all of a sudden.
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Brush engines (other bugs)
Version First Reported In: 5.2.0
Platform: Compiled Sources All
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-10-30 02:15 UTC by acc4commissions
Modified: 2023-10-30 07:32 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description acc4commissions 2023-10-30 02:15:58 UTC
SUMMARY
5.2.1 (git 40d4eee)

It's freshily introduced in today's krita plus.

The title says it all. Size option (with pen pressure) is enabled for every brushes. The default brushes too. 
I can turn it off and save them again, but it's going to take a long time if I do it.


STEPS TO REPRODUCE
1. 
2. 
3. 

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Dmitry Kazakov 2023-10-30 07:19:05 UTC
Hi, acc4commissions!

Thank you for your quick report! It seems like it is a regression from my yesterday's fix of bug 476076. I'll try to fix that asap. You can rollback to the yesterday's version, there is no need to resave the brushes.
Comment 2 Dmitry Kazakov 2023-10-30 07:30:32 UTC
Git commit d8430655625b9643982352c86f69adb0f8649718 by Dmitry Kazakov.
Committed on 30/10/2023 at 08:30.
Pushed by dkazakov into branch 'krita/5.2'.

Fix Size brush option to be checkable again

M  +1    -1    plugins/paintops/libpaintop/KisSizeOptionData.cpp

https://invent.kde.org/graphics/krita/-/commit/d8430655625b9643982352c86f69adb0f8649718
Comment 3 Dmitry Kazakov 2023-10-30 07:31:11 UTC
Git commit 0891bd38dae789940a2cf9abdedf2d97bef4d689 by Dmitry Kazakov.
Committed on 30/10/2023 at 08:31.
Pushed by dkazakov into branch 'master'.

Fix Size brush option to be checkable again

M  +1    -1    plugins/paintops/libpaintop/KisSizeOptionData.cpp

https://invent.kde.org/graphics/krita/-/commit/0891bd38dae789940a2cf9abdedf2d97bef4d689
Comment 4 Dmitry Kazakov 2023-10-30 07:32:27 UTC
Hi, @acc4commissions!

I have pushed the fix and kicked off the builds for Windows and Linux. Please check when they are ready:

https://binary-factory.kde.org/job/Krita_Stable_Windows_Build/2029/
https://binary-factory.kde.org/job/Krita_Stable_Appimage_Build/2034/