Fix Size brush option to be checkable again

BUG:476309